feat: Servers management
